# 3d_OpenGl_Engine

./: CMakeLists.txt  README.md  main.c  run.sh
.cache/clangd/index/: Application.c.0CE597C16B0F07B4.idx  Application.c.2C1E489EE80FC631.idx  Application.h.23272AAEA47473CC.idx  Application.h.AAAA20847EFCF241.idx  Context.c.274FB7A4FF215C2B.idx  Context.c.2E9FA6923B25A8E9.idx  Context.h.06B535F9FCCBDEF4.idx  Context.h.E711BCC0EF610356.idx  Window.c.9D4F390B903C0D8B.idx  Window.c.D99562CDC3C18278.idx  Window.h.2D62E2548278052C.idx  Window.h.95F1E44FD4BBD4B0.idx  aabb2d.h.23C1EB8971585DF8.idx  aabb2d.h.D39F7FD4535CE05D.idx  affine-mat.h.CC40ED1B7243E095.idx  affine-mat.h.F4CADCEDE4F2C001.idx  affine-post.h.487EB07C56510E2F.idx  affine-post.h.EB671C40D9BCE895.idx  affine-pre.h.698936E0BC81F6B7.idx  affine-pre.h.74E6F51EEF47E413.idx  affine.h.1F09299268210BCB.idx  affine.h.8A794E9130C6D8EA.idx  affine.h.D6F0590A64C855B9.idx  affine.h.FDEB2BE2D0882BF6.idx  affine2d-post.h.0E9607EA734F7B5A.idx  affine2d-post.h.40C8E7607D5B6415.idx  affine2d.h.387926CCED31956F.idx  affine2d.h.866631BF92410429.idx  application.c.2746309E3A3972A5.idx  application.c.85A718FABE7C7361.idx  application.h.05736C208C948896.idx  application.h.DD0A3DC9003E7E35.idx  bezier.h.AC94895F50C301A0.idx  bezier.h.E246D7D308614804.idx  box.h.609C84F77130099D.idx  box.h.6F1B25D2666E50D9.idx  cam.h.972476ADDDF17A6C.idx  cam.h.D88446DBC3982ADB.idx  camera.c.907676BEFF5796AA.idx  camera.c.9589255943389DBE.idx  (+180 more)
Core/: Application.c  Application.h  Context.c  Context.h  Window.c  Window.h
core/: application.c  application.h  context.c  context.h  time.c  time.h  window.c  window.h
ecs/: component.h  entity.c  entity.h
inputs/: inputs.c  inputs.h
renderer/: mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  shadow_map.c  shadow_map.h  texture.c  texture.h
scene/: camera.c  camera.h  context.c  context.h  scene.c  scene.h
shaders/: quad.f  quad.v  shadow.v  triangle.f  triangle.v
utility/: utility.c  utility.h
